--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,6 +9,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-size: 20px;
+  text-align: center;
+  background-color: #5DA9D2 ;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 code {
