--- a/src/routes/ProfilePage/ProfilePage.css
+++ b/src/routes/ProfilePage/ProfilePage.css
@@ -1,5 +1,7 @@
 ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .sort ul {
@@ -10,10 +12,4 @@ ul {
 .sort ul li {
   display: inline-block;
   margin: 0;
-}
-
-.quests ul li {
-  margin: 5px;
-  padding: 5px;
-  border: 1px black solid;
 }
