--- a/src/routes/QuestPage/QuestPage.css
+++ b/src/routes/QuestPage/QuestPage.css
@@ -1,9 +1,5 @@
 ul {
   list-style-type: none;
-}
-
-.tasks ul li {
-  margin: 5px;
-  padding: 5px;
-  border: 1px black solid;
+  padding: 0;
+  margin: 0;
 }
