--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,14 +1,15 @@
 nav {
   position: fixed;
+  z-index: 1000;
   top: 0;
   left: 0;
   right: 0;
-  padding: 1% 0;
   background-color: #18648D;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  height: 60px
 }
 
 nav button {
@@ -20,6 +21,7 @@ nav button {
   margin: 5px;
   transition-duration: 0.2s;
   -webkit-transition-duration: 0.2s;
+  font-family: 'Grenze', Times, serif;
 }
 
 nav button:hover, nav button:focus {
