--- a/src/components/TaskListItem/TaskListItem.css
+++ b/src/components/TaskListItem/TaskListItem.css
@@ -4,4 +4,29 @@
   border-radius: 4px;
   margin: 5px;
   padding: 5px;
-};
+}
+
+.buttons button {
+  font-family: 'Grenze', Times, serif;
+  border-radius: 3px;
+  background-color: #FFB65F;
+  border: 3px solid #7A4302;
+  color: #0C1653;
+  padding: 5px;
+  margin: 5px;
+  transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+  width: 80px;
+  height: 40px;
+  font-size: 16px;
+}
+
+.buttons button:hover, .buttons button:focus {
+  background-color: #7A4302;
+  border: 3px solid #FFB65F;
+  color: #6979D8;
+}
+
+.completed h2 {
+  text-decoration: line-through;
+}
