Add breakpoint for desktop

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,6 +3,7 @@ header {
 }
 
 .App {
+  background-color: #FFD66C; 
   flex: 1 0 auto;
 }
 
@@ -14,4 +15,16 @@ header {
 section {
   margin: 0;
   padding: 0;
+}
+
+@media screen and (min-width: 800px) {
+  .App {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .content div {
+    padding: 0 20px 0 20px;
+  }
 }
