--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   box-sizing: border-box;
   font-size: 20px;
   text-align: center;
-  background-color: #5DA9D2 ;
+  background-color: #BEA86F ;
   display: flex;
   flex-direction: column;
   height: 100vh;
